[gd_scene load_steps=12 format=3 uid="uid://cp5pyftpmc08e"]

[ext_resource type="Script" uid="uid://dyaiflyf1s7rd" path="res://Scripts/Bodies/Moving_mine.gd" id="1_otyfr"]
[ext_resource type="Texture2D" uid="uid://bgt0fp5tmrjh" path="res://Sprites/Enemies/Moving/moving_mine.png" id="2_gindm"]
[ext_resource type="Script" uid="uid://dligfwdfjh7a2" path="res://Scripts/Resources/Modules/Shooting_module.gd" id="2_t3kkr"]
[ext_resource type="Resource" uid="uid://cpvr3kco8adp5" path="res://Resources/Weapons/Default_enemy_weapon.tres" id="3_bydis"]
[ext_resource type="Script" uid="uid://d0ysr06su7yjs" path="res://Scripts/Resources/Weapons/Weapon.gd" id="3_v04ml"]

[sub_resource type="Resource" id="Resource_um2r2"]
script = ExtResource("2_t3kkr")
weapons = Array[ExtResource("3_v04ml")]([ExtResource("3_bydis")])
module_name = "No_name"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwdqo"]
size = Vector2(12, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0dqe"]
size = Vector2(12.5, 4)

[sub_resource type="Animation" id="Animation_0r6o1"]
resource_name = "back_to_normal"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="Animation" id="Animation_njgl8"]
resource_name = "shoot"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dn7ex"]
_data = {
&"back_to_normal": SubResource("Animation_0r6o1"),
&"shoot": SubResource("Animation_njgl8")
}

[node name="Moving_mine" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "markers", "timer_reload")]
z_index = 15
collision_layer = 2
collision_mask = 9
script = ExtResource("1_otyfr")
animation_player = NodePath("AnimationPlayer")
hp = 3
reload_time = 1.0
shooting_module = SubResource("Resource_um2r2")
markers = [NodePath("Marker2D"), NodePath("Marker2D2")]
timer_reload = NodePath("Timer_reload")
mirror_sprite = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -2
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_pwdqo")
disabled = true
metadata/_edit_lock_ = true

[node name="Timer_reload" type="Timer" parent="."]
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(4.0463, -5.6993)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(-3.9537, -5.6993)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_gindm")
hframes = 8
vframes = 2

[node name="Activation_area" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Activation_area"]
position = Vector2(-0.25, -2)
shape = SubResource("RectangleShape2D_l0dqe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dn7ex")
}
speed_scale = 1.2

[connection signal="timeout" from="Timer_reload" to="." method="_on_timer_reload_timeout"]
[connection signal="body_entered" from="Activation_area" to="." method="_on_activation_area_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
